@@ -1,3 +1,8 @@
+VSDebugPro_3-4-0-2_2024-05-14
+    [*] Updated to support VS2022
+    [*] Cleaned up assembly references
+    [*] Converted assembly references to package references
+
 VSDebugPro_3-4-0-1_2022-05-07
     [+] Always use debugger api
     [+] Memory operations for remote debugging
